2003-04-21  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_instance_init):
	work with ANSI compilers

2003-04-21  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_open):
	* src/totem.c: (totem_action_set_mrl): better message when the video
	type is not handled, ie. give a pointer to the additional plugins

2003-04-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): call XInitThreads very early on, before we
	even remotely touch the X server connection. Fixes the possible
	(async reply) lockups. Thanks to Owen Taylor for his quick diagnosis
	to the symptoms

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_display_is_local),
	(totem_setup_preferences): some work towards fixing #110851

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/scrsaver.c: (fake_event), (scrsaver_init),
	(scrsaver_disable), (scrsaver_enable): plenty of display locking around
	all that, and use XSync, not XFlush
	* src/totem-video-thumbnailer.c: (main): enable threads all the time

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* data/totem.glade:
	* src/totem.c: (totem_action_exit), (on_show_controls1_activate),
	(on_show_controls2_activate), (totem_action_handle_key),
	(totem_callback_connect): added controls to show/hide everything but
	the video canvas

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* data/totem.glade:
	* src/totem.c: (totem_action_set_mrl), (update_seekable),
	(on_video_button_press_event), (update_buttons),
	(totem_callback_connect), (video_widget_create): added a popup menu
	on the canvas, for right click

2003-04-18  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_proprietary_plugins_path):
	* src/bacon-video-widget-xine.c: (setup_config),
	(bacon_video_widget_set_media_device),