@@ -1,5 +1,10 @@
 2003-04-21  Bastien Nocera  <hadess@hadess.net>
 
+	* src/bacon-video-widget-gst.c: (got_time_tick): don't do divisions by
+	zero (Closes: #111295)
+
+2003-04-21  Bastien Nocera  <hadess@hadess.net>
+
 	* src/bacon-video-widget-gst.c: (bacon_video_widget_instance_init):
 	work with ANSI compilers
 
